TestNetflix.out
Coverage.py warning: No data was collected.
Traceback (most recent call last):
  File "/lusr/bin/coverage3", line 9, in <module>
    load_entry_point('coverage==3.7.1', 'console_scripts', 'coverage3')()
  File "/lusr/opt/python-3.4.1/lib/python3.4/site-packages/coverage/cmdline.py", line 721, in main
    status = CoverageScript().command_line(argv)
  File "/lusr/opt/python-3.4.1/lib/python3.4/site-packages/coverage/cmdline.py", line 438, in command_line
    self.do_execute(options, args)
  File "/lusr/opt/python-3.4.1/lib/python3.4/site-packages/coverage/cmdline.py", line 575, in do_execute
    self.run_python_file(filename, args)
  File "/lusr/opt/python-3.4.1/lib/python3.4/site-packages/coverage/execfile.py", line 100, in run_python_file
    code = make_code_from_py(filename)
  File "/lusr/opt/python-3.4.1/lib/python3.4/site-packages/coverage/execfile.py", line 141, in make_code_from_py
    code = compile(source, filename, "exec")
  File "TestNetflix.py", line 89
    '''
      ^
IndentationError: expected an indented block
